BibliotecaService passa a ter uma lista de livros disponiveis e uma lista de livros emprestados. Adicionados metos para emprestar e devolver livros. Se emprestas um livro é removido da lista de disponiveis e adicionado à lista de emprestados. Se devolves o processo é inverso. Main foi adaptada para usar estes metodos